# foomatic-filters

./: ChangeLog  Debugging.pm  INSTALL  Makefile  Makefile.am  Makefile.in  ParsePCL.pm  ParsePPD.pm  README  STANDARD_installation  Subprocess.pm  TODO  USAGE  VERSION.full  acinclude.m4  aclocal.m4  beh.in  colord.c  colord.h  config.h.in  configure  configure.ac  configure.in  directomatic.1.in  fileconverter.c  fileconverter.h  filter.conf  foomatic-gswrapper.1.in  foomatic-gswrapper.in  foomatic-rip.1.in  foomatic-rip.c  foomatic-rip.in  foomatic-rip.template.in  foomaticrip.c  foomaticrip.h  lpdomatic.8.in  makeMan.in  make_configure  mkinstalldirs  options.c  (+15 more)
debian/: README.Debian  changelog  control  dirs  foomatic-filters.config  foomatic-filters.postinst  foomatic-filters.postrm  foomatic-filters.templates  parseconfig.pl  rules
debian/po/: de.po  fr.po  ja.po  nl.po  pt_BR.po  templates.pot  tr.po
src/: Makefile  cupsomatic.pl.in  directomatic.pl.in  lpdomatic.pl.in  ppromatic.pl.in
test/: foomatic-test-input-ps.ps  foomatic-test-renderer  foomatic-test.ppd  lsbfuncs.sh  shfuncs.sh  tcm.sh  testfoomaticrip  tetapi.sh
tests/: HP4000_4.ppd  Makefile.in  TestScript  added.ppd  en.filter.conf.test  en.hi.ps.out  filter.conf.test  foobool.threepages.out  hi.ps.out  hi.txt  multi.choice1.threepages.out  multi.choice23.threepages.out  one.pcl.out  opts.out  opts.out.ps  out3.threepages.out  parse.ppd  pdq.out  ppd.out  ppd.threepages.out  ppd1  reprocess.multi.choice23.threepages.out  t1.one.pcl.expected  t1.one.pjl.expected  threepages.ps
